vlib/v/checker/tests/array_sort_function_type_err.vv
fn b() {}

fn c() {}

fn main() {
	mut x := [main, b, c]
	x.sort(a > b)
}
